--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -29,6 +27,5 @@
     "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "vite": "^6.1.0"
-  },
-  "homepage": "https://jogakzip7.github.io/client/"
+  }
 }
