--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "vite build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
@@ -29,6 +29,5 @@
     "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "vite": "^6.1.0"
-  },
-  "homepage": "https://jogakzip7.github.io/client/"
+  }
 }
