배포 전 원상복구

--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "jogakzip",
-  "private": false,
-  "homepage": "https://jogakzip7.github.io/client/",
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.9",
